[package]
name = "inet-diag"
version = "0.1.1"
authors = ["wfleming", "amos"]
edition = "2021"

[dependencies]
bincode = "0.6.1"
rustc-serialize = "0.3.24"
clap = "2.20.1"
netlink-rs = {git = "https://github.com/MoSunDay/netlink-rs.git"} 
rdkafka = { version = "0.26.0", features = ["cmake-build"] }
futures = "0.3"
chrono = "0.4"
config = "0.10.1"
tokio = { version = "1", features = ["full"] }
get_if_addrs = "0.5"